gift card y mas actualizaciones

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Pakanga, ropa sublimaciones de calidad">
     <link rel="icon" href="./favicon.png" type="image/png">
-    
+    <link rel="preconnect" href="https://monarqui.com.ar">
+<link rel="preconnect" href="https://laanonimaonline.com">
+<link rel="preconnect" href="https://cdnlaol.laanonimaonline.com">
+<link rel="preconnect" href="https://mlstatic.com">
+
 
     <title>Pakanga</title>
 
